--- a/src/main/resources/templates/gigDetails.html
+++ b/src/main/resources/templates/gigDetails.html
@@ -2,13 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body id="gigPage" class="grey lighten-1 ">
+<body th:inline="text" id="gigPage" class="black ">
 <div th:include="fragments/navbar :: navHome"></div>
-<main th:inline="text" class="gigDetails">
-    <div class="background-image" th:style="'background:url('+ @{${gig.gigArt}}+')no-repeat center ; background-size: cover;' "></div>
+<main  class="gigDetails">
+        <div class="background-image hide-on-med-and-down" th:style="'background:url('+ @{${gig.gigArt}}+')no-repeat center ; background-size: cover;' "></div>
 
-    <div class="gig container ">
-        <div>
+<div class="container">
+    <div class="gig ">
+        <div class="gig-nav">
             <nav th:if="${gig.companyProfile.user.username == user.username}" class="gigNav transparent ">
 
                 <ul>
@@ -27,8 +28,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="row">
-            <div class="col s12 m9">
+        <div class="gig-info">
+            <div class="gig-left">
                 <section class="gig-image white" th:style="'background:url('+ @{${gig.gigArt}}+') no-repeat center ; background-size: cover'">
                     <div class="gig-details-row white-text">
                         <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
@@ -39,9 +40,7 @@
 
                 </section>
                 <section class="time-description">
-                    <div class="row">
 
-                        <div class="col s12 m6">
                             <section class="gigDescript white">
                                 <div class="section">
                                     <p class="gigType">[[${gig.gigType}]]</p>
@@ -70,25 +69,25 @@
 
                             </section>
 
-                        </div>
-                        <div class="col s12 m6">
+
+
                             <section class="gig-map" th:style="'background:url('+ @{${url}}+')no-repeat center ; background-size: cover;'">
                                 <div class="locationBox left">
-                                        <div >
-                                            [[${gig.gigLocation}]]
-                                        </div>
-                                        <div >
-                                            <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
-                                        </div>
+                                    <div >
+                                        [[${gig.gigLocation}]]
+                                    </div>
+                                    <div >
+                                        <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
+                                    </div>
                                 </div>
                             </section>
-                        </div>
 
-                    </div>
+
+
 
                 </section>
             </div>
-            <div class="col s12 m3">
+            <div class="hire-right">
                 <section class="hireForm grey lighten-3 ">
                     <div th:if="${gig.gigHired} == true" >
                         <div class="center-align">
@@ -129,11 +128,14 @@
 
                             </div>
                             <div  th:if="${gig.companyProfile.user.username == user.username}" class="section">
-                                <a class='dropdown-button logBtn hireBtn hoverable' href='#' data-activates='hireDrop'>Select Musician to Hire</a>
+                                <div class="center-align">
+                                    <a class='dropdown-button logBtn hireBtn hoverable' href='#' data-activates='hireDrop'>Select to Hire</a>
 
-                                <ul id="hireDrop" class="dropdown-content">
+                                </div>
+
+                                <ul id="hireDrop" class="dropdown-content" >
                                     <li th:each="applied : ${applied}">
-                                        <a th:href="'/company/gig/' + @{${gig.id}} + '/confirm-hire/musician/' + @{${applied.musicianProfile.id}}">
+                                        <a th:href="'/company/gig/' + @{${gig.id}} + '/confirm-hire/musician/' + @{${applied.musicianProfile.id}}" data-constrainwidth="false">
                                             <div class="hireRow">
                                                 <img th:src="@{${applied.musicianProfile.profPicImage}} " class="navAvatar circle"/>
                                                 <p>[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
@@ -158,9 +160,12 @@
 
 
                 </section>
+
             </div>
         </div>
     </div>
+
+</div>
 
 
 
