--- a/src/main/resources/templates/musicianDetails.html
+++ b/src/main/resources/templates/musicianDetails.html
@@ -2,119 +2,230 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="grey lighten-1">
-<main th:inline="text" >
+<body class="grey lighten-1" th:inline="text">
+<main >
     <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianDetail.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
         <div th:include="fragments/navbar :: navHome"></div>
+        <div class="hide-on-med-and-down">
+            <div class="white-text bannerBio ">
+                <h4>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]]</h4>
+                <h5 > [[${musicianDetail.location}]]</h5>
 
-        <div class="white-text bannerBio ">
-            <h4>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]]</h4>
-            <h5 > [[${musicianDetail.location}]]</h5>
-
+            </div>
         </div>
 
+
+        <div class="show-on-medium-and-down hide-on-large-only">
+            <div class="tab-profile white-text">
+                <div class="circle tab-profPic profImage" th:style="'background:url('+ @{${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; width: 200px; height: 200px;'">
+                </div>
+                <h4>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]]</h4>
+                <h5 > [[${musicianDetail.location}]]</h5>
+            </div>
+        </div>
+
+
     </section>
-    <section class="container">
-        <div class=" row">
-            <div class="col s12 m4">
-                <div class="profCol z-depth-5">
-                    <div class="profImage" th:style="'background:url('+ @{${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
+    <div class="hide-on-med-and-down">
+        <section class="container">
+            <div class="row-content">
+                <div class="profile-info">
+                    <div class="profCol z-depth-5">
+                        <div class="profImage" th:style="'background:url('+ @{${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
+
+                        </div>
+                        <div class="profInfo white">
+                            <section >
+                                <div class="section">
+                                    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
+
+                                </div>
+
+                                <div class="divider"></div>
+                                <div class="section">
+                                    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianDetail.user.email}]] </p>
+                                    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianDetail.user.phoneNumber}]]</p>
+
+                                </div>
+
+                                <div class="divider"></div>
+                                <div class="section">
+                                    <p> [[${musicianDetail.bio}]]</p>
+
+                                </div>
+
+                            </section>
+                        </div>
                     </div>
-                    <div class="profInfo white">
-                        <section >
-                            <div class="section">
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
+                </div>
+                <div class="profile-content">
+                    <div class="row">
+                        <div class="col s12">
+                            <ul class="tabs tabs-fixed-width z-depth-4">
+                                <li class="tab "><a href="#music">My Music</a></li>
+                                <li class="tab "><a href="#upEvents">Hired Events</a></li>
+                            </ul>
+                        </div>
+                        <div id="music" class="col s12 container">
+                            <div class=" musicCard">
+                                <div class="card">
+                                    <h4 class="center-align ">My Music
+
+                                        <div th:if="${media.isEmpty()}">
+                                            <h5>No Music</h5>
+                                        </div>
+                                    </h4>
+                                </div>
+
+                                <div th:each="media : ${media}" class="media-row">
+                                    <div class="row-content card valign-wrapper">
+                                        <div>
+                                            <h5>
+                                                <a class="valign-wrapper popup-youtube" th:href="@{${media.media_url}}">
+                                                    <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
+                                                    [[${media.title}]]
+                                                </a>
+                                            </h5>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
 
                             </div>
+                        </div>
+                        <div id="upEvents" class="col s12">
+                            <h4 class="center-align">Upcoming Events</h4>
+                            <div th:if="${hired.isEmpty()}">
+                                <h5>No Upcoming Events</h5>
+                            </div>
+                            <div class="row"  >
+                                <div class="col s12 m4" th:each="hired : ${hired}">
+                                    <div  class="gigCard hoverable">
+                                        <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                            <div class="dateBox white orange-text text-accent-4 center-align">
+                                                <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
+                                                <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
+                                            </div>
+                                            <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
 
-                            <div class="divider"></div>
-                            <div class="section">
-                                <p class="valign-wrapper" >
-                                    <a class="email valign-wrapper tooltipped white-text" data-position="top" data-delay="50" data-tooltip="Email Me" th:href="'mailto:'+@{${musicianDetail.user.email}}">
-                                        <i class="orange-text text-accent-4 material-icons">email</i>
-                                        [[${musicianDetail.user.email}]]
-                                    </a>
-                                </p>
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianDetail.user.phoneNumber}]]</p>
+                                        </div>
+                                        <div class="gigInfo white center-align">
+                                            <p><b>[[${hired.gig.gigTitle}]]</b></p>
+                                            <p >[[${hired.gig.gigLocation}]]</p>
+
+                                        </div>
+                                    </div>
+                                </div>
 
 
                             </div>
+                        </div>
 
-                            <div class="divider"></div>
-                            <div class="section">
-                                <p> [[${musicianDetail.bio}]]</p>
-
-                            </div>
-
-                        </section>
                     </div>
                 </div>
             </div>
-            <div class="col s12 m8">
-                <div class="row">
-                    <div class="col s12">
-                        <ul class="tabs z-depth-4">
-                            <li class="tab col s6"><a href="#music">My Music</a></li>
-                            <li class="tab col s6"><a href="#upEvents">Hired Events</a></li>
-                        </ul>
-                    </div>
-                    <div id="music" class="container">
+        </section>
+    </div>
+    <div class="show-on-medium-and-down hide-on-large-only">
 
-                            <h4 class="center-align">My Music
-                                <div th:if="${media.isEmpty()}">
-                                    <h5>No Music</h5>
-                                </div>
-                            </h4>
+        <div class="row">
+            <div class="col s12">
+                <ul class="tabs tabs-fixed-width z-depth-4 ">
+                    <li class="tab  "><a href="#tab-music"><i class="orange-text text-accent-4 material-icons">library_music</i></a></li>
+                    <li class="tab  "><a class="active" href="#tab-bio"><i class="orange-text text-accent-4 material-icons">account_circle</i></a></li>
+                    <li class="tab "><a href="#tab-upEvents"><i class="orange-text text-accent-4 material-icons">beenhere</i></a></li>
 
-                            <div class="card center-align">
-                                <div th:each="media : ${media}" class="detailsMedia mediaTitle">
+                </ul>
+            </div>
+            <div id="tab-bio" class="col s12 container">
+                <div class="card-panel">
+                    <section >
+                        <div class="section">
+                            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
+
+                        </div>
+
+                        <div class="divider"></div>
+                        <div class="section">
+                            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianDetail.user.email}]] </p>
+                            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianDetail.user.phoneNumber}]]</p>
+
+                        </div>
+
+                        <div class="divider"></div>
+                        <div class="section">
+                            <p class="center-align"> [[${musicianDetail.bio}]]</p>
+
+                        </div>
+
+                    </section>
+                </div>
+            </div>
+            <div id="tab-music" class="col s12 container">
+                <div class=" musicCard">
+
+                    <h4 class="center-align">My Music
+
+                        <div th:if="${media.isEmpty()}">
+                            <h5>No Music</h5>
+                        </div>
+                    </h4>
+                    <div th:each="media : ${media}" class="media-row">
+                        <div class="row-content white section valign-wrapper">
+                            <div>
+                                <h5>
                                     <a class="valign-wrapper popup-youtube" th:href="@{${media.media_url}}">
                                         <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
                                         [[${media.title}]]
                                     </a>
-                                </div>
+                                </h5>
+
                             </div>
 
-
+                        </div>
 
                     </div>
-                    <div id="upEvents" class="col s12">
-                        <h4 class="center-align">Upcoming Events</h4>
-                        <div th:if="${hired.isEmpty()}">
-                            <h5 class="center-align">No Upcoming Events</h5>
-                        </div>
-                        <div class="row"  >
-                            <div class="col s12 m4" th:each="hired : ${hired}">
-                                <div  class="gigCard hoverable">
-                                    <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
-                                        <div class="dateBox white orange-text text-accent-4 center-align">
-                                            <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
-                                            <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
-                                        </div>
-                                        <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/musician/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
-                                        <a sec:authorize="hasRole('ROLE_COMPANY')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/company/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
 
-                                    </div>
-                                    <div class="gigInfo white center-align">
-                                        <p><b>[[${hired.gig.gigTitle}]]</b></p>
-                                        <p >[[${hired.gig.gigLocation}]]</p>
 
-                                    </div>
+                </div>
+            </div>
+            <div id="tab-upEvents" class="col s12">
+                <h4 class="center-align">Upcoming Events</h4>
+                <div th:if="${hired.isEmpty()}">
+                    <h5 class="center-align">No Upcoming Events</h5>
+                </div>
+                <div class="row"  >
+                    <div class="col s12 m4" th:each="hired : ${hired}">
+                        <div  class="gigCard hoverable">
+                            <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                <div class="dateBox white orange-text text-accent-4 center-align">
+                                    <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
+                                    <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
                                 </div>
+                                <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+
                             </div>
+                            <div class="gigInfo white center-align">
+                                <p><b>[[${hired.gig.gigTitle}]]</b></p>
+                                <p >[[${hired.gig.gigLocation}]]</p>
 
-
+                            </div>
                         </div>
                     </div>
 
 
                 </div>
-
             </div>
 
         </div>
-    </section>
+    </div>
+
 </main>
+
+
 <div th:include="fragments/footer :: footer"></div>
 
 <span th:include="fragments/includes :: js"></span>
