--- a/src/main/resources/templates/Messages/messagePage.html
+++ b/src/main/resources/templates/Messages/messagePage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="grey lighten-1">
+<body class="gradient-background">
 <div th:include="fragments/navbar :: navHome"></div>
 <main th:inline="text" class="container message">
     <div class="background-image"></div>
