--- a/src/main/resources/templates/Create/createCompany.html
+++ b/src/main/resources/templates/Create/createCompany.html
@@ -2,89 +2,96 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" class="signCompany">
+<body th:inline="text" class="signCompany gradient-background">
+<div class="page-flexbox-wrapper">
+    <div th:include="fragments/navbar :: navHome"></div>
+    <main class="compSignup">
+        <div class="background-image hide-on-med-and-down"></div>
 
-<div th:include="fragments/navbar :: navHome"></div>
-<main class="compSignup">
-    <div class="background-image"></div>
-
-    <div class="card-panel container">
-        <div class="row">
-            <div class="col s12 m6 logoSide center-align ">
-                <h1 class="loginLogo"> <a href="/" >gigFinder</a></h1>
-                <h5 class="white-text"> Company Signup</h5>
-            </div>
-            <div class="col s12 m6 white compForm">
-                <form th:action="@{/signup/company/}" method="post">
-                    <div th:object="${user}">
-                        <div class="row">
-                            <div class="input-field col s12 m6">
-                                <label for="username">Username</label>
-                                <input id="username" type="text" th:field="*{username}"/>
-                            </div>
-
-                            <div class="input-field col s12 m6">
-                                <label for="password">Password</label>
-                                <input id="password" type="password" th:field="*{password}"/>
-
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12 m6">
-                                <label for="email"> Email</label>
-                                <input id="email" type="email" th:field="*{email}"/>
-                            </div>
-                            <div class="input-field col s12 m6">
-                                <label for="pNumber">Phone Number</label>
-                                <input id="pNumber" type="text" th:field="*{phoneNumber}"/>
-                            </div>
-                        </div>
-                    </div>
-                    <div th:object="${companyProfile}">
-
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <label for="name">Company Name</label>
-                                <input id="name" type="text" th:field="*{companyName}"/>
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12 m6">
-                                <label for="firstName">Contact First Name</label>
-                                <input id="firstName" type="text" th:field="*{companyContactFirstName}"/>
-                            </div>
-                            <div class="input-field col s12 m6">
-                                <label for="lastName">Contact Last Name</label>
-                                <input id="lastName" type="text" th:field="*{companyContactLastName}"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s6">
-                                <input id="city" type="text" name="companyCity"/>
-                                <label for="city">City</label>
-                            </div>
-                            <div class="input-field col s6 m6">
-                                <select name="companyState" id="state">
-                                    <option value="" disabled="disabled" selected="selected">State</option>
-                                    <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
-                                </select>
-                            </div>
-                        </div>
-
+        <div class="card-panel container">
+            <div class="row">
+                <div class="col s12 m6  center-align ">
+                    <div class="logoSide">
+                        <h1 class="loginLogo"> <a href="/" >gigFinder</a></h1>
+                        <h5 class="white-text"> Company Signup</h5>
                     </div>
 
-                    <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
+                </div>
+                <div class="col s12 m6 white compForm">
+                    <div class="compForm">
+                        <form th:action="@{/signup/company/}" method="post">
+                            <div th:object="${user}">
+                                <div class="row">
+                                    <div class="input-field col s12 m6">
+                                        <label for="username">Username</label>
+                                        <input id="username" type="text" th:field="*{username}"/>
+                                    </div>
 
-                </form>
+                                    <div class="input-field col s12 m6">
+                                        <label for="password">Password</label>
+                                        <input id="password" type="password" th:field="*{password}"/>
+
+                                    </div>
+
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12 m6">
+                                        <label for="email"> Email</label>
+                                        <input id="email" type="email" th:field="*{email}"/>
+                                    </div>
+                                    <div class="input-field col s12 m6">
+                                        <label for="pNumber">Phone Number</label>
+                                        <input id="pNumber" type="text" th:field="*{phoneNumber}"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div th:object="${companyProfile}">
+
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <label for="name">Company Name</label>
+                                        <input id="name" type="text" th:field="*{companyName}"/>
+                                    </div>
+
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12 m6">
+                                        <label for="firstName">Contact First Name</label>
+                                        <input id="firstName" type="text" th:field="*{companyContactFirstName}"/>
+                                    </div>
+                                    <div class="input-field col s12 m6">
+                                        <label for="lastName">Contact Last Name</label>
+                                        <input id="lastName" type="text" th:field="*{companyContactLastName}"/>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s6">
+                                        <input id="city" type="text" name="companyCity"/>
+                                        <label for="city">City</label>
+                                    </div>
+                                    <div class="input-field col s6 m6">
+                                        <select name="companyState" id="state">
+                                            <option value="" disabled="disabled" selected="selected">State</option>
+                                            <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
+
+                        </form>
+
+                    </div>
+                </div>
             </div>
+
         </div>
-
-    </div>
-</main>
-<div th:include="fragments/footer :: footer"></div>
-<div th:include="fragments/modals :: signupModal"></div>
+    </main>
+    <div th:include="fragments/footer :: footer"></div>
+    <div th:include="fragments/modals :: signupModal"></div>
+</div>
 
 <span th:include="fragments/includes :: js"></span>
 </body>
