--- a/src/main/resources/templates/Search/search.html
+++ b/src/main/resources/templates/Search/search.html
@@ -3,9 +3,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" >
-<main class="search">
-    <div th:include="fragments/navbar :: navHome"></div>
+<body th:inline="text" class="search">
+<div th:include="fragments/navbar :: navHome"></div>
+<main >
     <div class="container">
         <div sec:authorize="hasRole('ROLE_MUSICIAN')">
             <h1 class="center-align white-text">Search for Gigs</h1>
@@ -60,16 +60,24 @@
             <div class="section">
                 <form th:action="@{/searchName}" method="post" class="white-text">
                     <div class=" section ">
-                        <div class="input-field ">
-                            <i class="orange-text text-accent-4 material-icons prefix">account_circle</i>
+                        <div class="row">
+                            <div class="col s6">
+                                <div class="input-field ">
+                                    <i class="orange-text text-accent-4 material-icons prefix">account_circle</i>
 
-                            <input placeholder="Search First Name" id="first_name" type="text" name="firstName" class="validate"/>
-                            <label for="first_name">First Name</label>
+                                    <input placeholder="Search First Name" id="first_name" type="text" name="firstName" class="validate"/>
+                                    <label for="first_name">First Name</label>
+                                </div>
+
+                            </div>
+                            <div class="col s6">
+                                <div class="input-field ">
+                                    <input placeholder="Search Last Name" id="last_name" type="text" name="lastName" class="validate"/>
+                                    <label for="last_name">Last Name</label>
+                                </div>
+                            </div>
                         </div>
-                        <div class="input-field ">
-                            <input placeholder="Search Last Name" id="last_name" type="text" name="lastName" class="validate"/>
-                            <label for="last_name">Last Name</label>
-                        </div>
+
                         <div class="right">
                             <button class="btn orange accent-4 " type="submit">Search</button>
 
