--- a/src/main/resources/templates/confirmHire.html
+++ b/src/main/resources/templates/confirmHire.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="grey lighten-1 hireConfirm " th:inline="text">
+<body class="gradient-background hireConfirm " th:inline="text">
 <div th:include="fragments/navbar :: navHome"></div>
 
 <main class="confirmHire">
