--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -5,80 +5,81 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body>
 <div th:fragment="navHome">
-            <ul id="dropdown1" class="dropdown-content" >
-                <li>
-                    <form th:action="@{/logout}" method="post">
-                        <input class="btn-flat" type="submit" value="LOGOUT"/>
-                    </form>
-                </li>
-                <li sec:authorize="hasRole('ROLE_MUSICIAN')">
-                    <a class="waves-effect waves-light modal-trigger" href="#musicUpdate">Update Profile</a>
-                </li>
-                <li sec:authorize="hasRole('ROLE_COMPANY')">
-                    <a class="waves-effect waves-light modal-trigger" href="#companyUpdate">Update Profile</a>
-
-                </li>
-            </ul>
-
-    <ul class="side-nav" id="mobile-demo">
-        <div sec:authorize="!isAuthenticated()">
-            <li><a href="/login" >Login</a></li>
-        </div>
-        <div sec:authorize="hasRole('ROLE_COMPANY')">
-            <li>
-                <div class="user-view">
-                    <div class="background">
-                        <img th:src="@{${companyProfile.companyCoverPic}}" alt=""/>
-                    </div>
-                    <a href="#!user"><img class="circle" th:src="@{${companyProfile.companyProfPic}}"/></a>
-                    <a href="#!name"><span class="white-text name">[[${user.username}]]</span></a>
-                    <a href="#!email"><span class="white-text email">[[${user.email}]]</span></a>
-
-                </div>
-            </li>
-            <li>
-                <a class="waves-effect waves-light modal-trigger" href="#companyUpdate">Update Profile</a>
-            </li>
-            <li><div class="divider"></div></li>
-
-            <li><a class="waves-effect" th:href="@{/company/find-gigs}">Find a Gig</a></li>
-            <li><a  class="waves-effect" th:href="@{/company/find-bands}">Find a Band</a></li>
-            <li><a class="waves-effect" href="/company/search/">Search Musicians</a></li>
-            <li><div class="divider"></div></li>
+    <header>
+        <ul id="dropdown1" class="dropdown-content" >
             <li>
                 <form th:action="@{/logout}" method="post">
                     <input class="btn-flat" type="submit" value="LOGOUT"/>
                 </form>
             </li>
-
-        </div>
-        <div sec:authorize="hasRole('ROLE_MUSICIAN')">
-            <li>
-                <div class="user-view">
-                    <div class="background">
-                        <img th:src="@{${musicianProfile.coverPicImage}}" alt=""/>
-                    </div>
-                    <a href="#!user"><img class="circle" th:src="@{${musicianProfile.profPicImage}}"/></a>
-                    <a href="#!name"><span class="white-text name">[[${user.username}]]</span></a>
-                    <a href="#!email"><span class="white-text email">[[${user.email}]]</span></a>
-                </div>
-            </li>
-            <li>
+            <li sec:authorize="hasRole('ROLE_MUSICIAN')">
                 <a class="waves-effect waves-light modal-trigger" href="#musicUpdate">Update Profile</a>
             </li>
-            <li><div class="divider"></div></li>
-            <li><a class="waves-effect"  th:href="@{/musician/find-gigs}">Find a Gig</a></li>
-            <li><a class="waves-effect" th:href="@{/musician/find-bands}">Find a Band</a></li>
-            <li><a class="waves-effect" href="/musician/search/">Search Gigs</a></li>
-            <li><div class="divider"></div></li>
-            <li>
-                <form th:action="@{/logout}" method="post">
-                    <input class="waves-effect" type="submit" value="Logout"/>
-                </form>
-            </li>
+            <li sec:authorize="hasRole('ROLE_COMPANY')">
+                <a class="waves-effect waves-light modal-trigger" href="#companyUpdate">Update Profile</a>
 
-        </div>
-    </ul>
+            </li>
+        </ul>
+
+        <ul class="side-nav" id="mobile-demo">
+            <div sec:authorize="!isAuthenticated()">
+                <li><a href="/login" >Login</a></li>
+            </div>
+            <div sec:authorize="hasRole('ROLE_COMPANY')">
+                <li>
+                    <div class="user-view">
+                        <div class="background">
+                            <img th:src="@{${companyProfile.companyCoverPic}}" alt=""/>
+                        </div>
+                        <a href="#!user"><img class="circle" th:src="@{${companyProfile.companyProfPic}}"/></a>
+                        <a href="#!name"><span class="white-text name">[[${user.username}]]</span></a>
+                        <a href="#!email"><span class="white-text email">[[${user.email}]]</span></a>
+
+                    </div>
+                </li>
+                <li>
+                    <a class="waves-effect waves-light modal-trigger" href="#companyUpdate">Update Profile</a>
+                </li>
+                <li><div class="divider"></div></li>
+
+                <li><a class="waves-effect" th:href="@{/company/find-gigs}">Find a Gig</a></li>
+                <li><a  class="waves-effect" th:href="@{/company/find-bands}">Find a Band</a></li>
+                <li><a class="waves-effect" href="/company/search/">Search Musicians</a></li>
+                <li><div class="divider"></div></li>
+                <li>
+                    <form th:action="@{/logout}" method="post">
+                        <input class="btn-flat" type="submit" value="LOGOUT"/>
+                    </form>
+                </li>
+
+            </div>
+            <div sec:authorize="hasRole('ROLE_MUSICIAN')">
+                <li>
+                    <div class="user-view">
+                        <div class="background">
+                            <img th:src="@{${musicianProfile.coverPicImage}}" alt=""/>
+                        </div>
+                        <a href="#!user"><img class="circle" th:src="@{${musicianProfile.profPicImage}}"/></a>
+                        <a href="#!name"><span class="white-text name">[[${user.username}]]</span></a>
+                        <a href="#!email"><span class="white-text email">[[${user.email}]]</span></a>
+                    </div>
+                </li>
+                <li>
+                    <a class="waves-effect waves-light modal-trigger" href="#musicUpdate">Update Profile</a>
+                </li>
+                <li><div class="divider"></div></li>
+                <li><a class="waves-effect"  th:href="@{/musician/find-gigs}">Find a Gig</a></li>
+                <li><a class="waves-effect" th:href="@{/musician/find-bands}">Find a Band</a></li>
+                <li><a class="waves-effect" href="/musician/search/">Search Gigs</a></li>
+                <li><div class="divider"></div></li>
+                <li>
+                    <form th:action="@{/logout}" method="post">
+                        <input class="waves-effect" type="submit" value="Logout"/>
+                    </form>
+                </li>
+
+            </div>
+        </ul>
 
         <nav>
             <div class=" nav-wrapper">
@@ -91,29 +92,38 @@
 
                 <a sec:authorize="isAuthenticated()" href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-gigs}">Find a Gig</a></li>
-                    <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-gigs}">Find a Gig</a></li>
+                    <div sec:authorize="hasRole('ROLE_COMPANY')">
+                        <li><a href="/company/search/">Search</a></li>
+                        <li><a  th:href="@{/company/find-gigs}">Find a Gig</a></li>
+                        <li><a  th:href="@{/company/find-bands}">Find a Band</a></li>
+                        <li>
+                            <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
+                                [[${user.username}]] <img th:src="@{${companyProfile.companyProfPic}} " class="navAvatar circle"/>
+                                <i class="material-icons right">arrow_drop_down</i></a>
+                        </li>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_MUSICIAN')">
+                        <li><a href="/musician/search/">Search</a></li>
 
-                    <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-bands}">Find a Band</a></li>
-                    <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-bands}">Find a Band</a></li>
+                        <li><a  th:href="@{/musician/find-gigs}">Find a Gig</a></li>
+
+                        <li><a th:href="@{/musician/find-bands}">Find a Band</a></li>
+                        <li >
+                            <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
+                                [[${user.username}]] <img th:src="@{${musicianProfile.profPicImage}} " class="navAvatar circle"/>
+                                <i class="material-icons right">arrow_drop_down</i></a>
+                        </li>
+                    </div>
+
 
                     <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger logBtn" href="#signupModal" style="margin-right: 0px;">Login</a></li>
-                    <li sec:authorize="hasRole('ROLE_COMPANY')">
-                        <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
-                            [[${user.username}]] <img th:src="@{${companyProfile.companyProfPic}} " class="navAvatar circle"/>
-                            <i class="material-icons right">arrow_drop_down</i></a>
-                    </li>
-                    <li sec:authorize="hasRole('ROLE_MUSICIAN')">
-                        <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
-                            [[${user.username}]] <img th:src="@{${musicianProfile.profPicImage}} " class="navAvatar circle"/>
-                            <i class="material-icons right">arrow_drop_down</i></a>
-                    </li>
+
+
                 </ul>
 
             </div>
         </nav>
-
-
+    </header>
 
 </div>
 
