--- a/src/main/resources/templates/gigDetails.html
+++ b/src/main/resources/templates/gigDetails.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" id="gigPage" class="black ">
+<body th:inline="text" id="gigPage" class="gradient-background ">
 <div th:include="fragments/navbar :: navHome"></div>
 <main  class="gigDetails">
         <div class="background-image hide-on-med-and-down" th:style="'background:url('+ @{${gig.gigArt}}+')no-repeat center ; background-size: cover;' "></div>
